  * dh_systemd_start: Ditto.
  * dh_installinit: In compat 12, error out if an upstart init file
    is provided with a reminder message about how to remove the
    obsolete conffile.  (Closes: #876453)
  * dh_systemd_enable: Permit missing explicitly requested file in
    package as long as another on being acted on ships it.
    (Closes: #878911)
  * dh_systemd_start: Ditto.

 -- Niels Thykier <niels@thykier.net>  Sat, 14 Oct 2017 11:18:19 +0000

debhelper (10.9.2) unstable; urgency=medium

  [ Niels Thykier ]
  * dh_install: Defer the removal of --list-missing and
    --fail-missing until compat 12.
  * dh: Run the new dh_installsystemd helper by default in compat 11.
  * systemd.pm: Remove the sequence in compat 11.  It has been replaced
    by the new dh_installsystemd helper.

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * qmake.pm: Remove unnecessary "-nocache" parameter.
    (Closes: #878427, LP: #1206234)

  [ Ville Skyttä ]
  * Fix a number of spelling mistakes.  (Closes: #878325)

  [ Felipe Sateler ]
  * dh_installsystemd: New command (currently noop except when used in
    the experimental compat 11).  This new helper:
    - Generates postinst code for tmpfiles (now that dh_installinit
      does not).
    - Follows the naming convention for other built-in dh_* commands.
    - Replaces dh_systemd_enable and dh_systemd_start in compat 11
      and later.
    - Only acts on units with the name specified by "--name" when this
      option is given.
    (Closes: #752521, #857306, #870768, #876486)
  * dh_systemd_enable: Remove as obsolete in compat 11.
  * dh_systemd_start: Ditto.

  [ Helmut Grohne ]
  * cmake.pm: Also supply PKGCONFIG_EXECUTABLE for obsolete
    UsePkgConfig.cmake.  (Closes: #878460)

 -- Niels Thykier <niels@thykier.net>  Sat, 14 Oct 2017 07:19:38 +0000

debhelper (10.9.1) unstable; urgency=medium

  [ Niels Thykier ]
  * dh_builddeb: Add some missing error checks.
  * Dh_Lib.pm: Fix bug where debhelper could discard some error