@@ -101,7 +101,7 @@ on_pkgs_in_parallel {
 
 		# General permissions fixing.
 		complex_doit("find $tmp ${find_exclude_options} -print0",
-					 "2>/dev/null | xargs -0r chown --no-dereference 0:0");
+					 "2>/dev/null | xargs -0r chown --no-dereference 0:0") if should_use_root();
 		find_and_reset_perm($tmp, 'go=rX,u+rw,a-s', '! -type l');
 	
 		# Fix up permissions in usr/share/doc, setting everything to not
